fix text spacing

--- a/src/index.css
+++ b/src/index.css
@@ -71,7 +71,7 @@ body {
 
   .display-xl {
     font-size: clamp(1.75rem, 8cqi, 9.5rem);
-    line-height: 0.95;
+    line-height: 1.05;
     letter-spacing: -0.035em;
     font-weight: 500;
   }
